--- a/experimment.html
+++ b/experimment.html
@@ -7,10 +7,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"><!-- レスポンシブデザインへの対応 -->
     <title>BIOMOD 2022 Quorum Hacker</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_for_notebook.css">
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><!-- jQuery読み込み -->
     <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script><!-- BootstrapのJS読み込み -->
+    
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> <!-- subnavと現在地表示のjQuery読み込み -->
+    <script src="js/5-1-10.js"></script> <!--subnavの自作のJS-->
+    <script src=”js/stickyfill.min.js”></script> <!--subnavのJS　Gitから-->
+    <script src=”js/stickyfill.js”></script> <!--subnavのJS　Gitから-->
+    <script src="js/5-1-26_for_notebook.js"></script> <!--現在地表示の自作のJS-->
+
+
+
     <script>
         //header,footerの読み込み
         $(function () {
@@ -19,29 +29,68 @@
         });
     </script>
 </head>
-<div id="header"></div>
+
 <body>
-    <main>
-        <h1>Notebook</h1>
-        <section>
-            <div>
-                <h2>Reaction</h2>
-                <p>Biofilm is prevented by disturbing quorum sensing.<br>
-                    Here, we proposed ...
-                </p>
-            </div>
-            <img src="images/yp_aptamer_noaxis.png" alt="explanation1">
+<div id="header"></div>
+<div id="container">
+    <main id="main-area">
+        <h1>Experiment</h1>
+        <section class="scroll-point" id="area-1">
+            <h2>Experimental Items</h2>
+            <li>1. Hybridization of DNA aptamer (Pool<sub>99</sub>) + Output1</li>
+            <li>2. Dissociation of Output1 and DNA Aptamer (Pool<sub>99</sub>) by C4-HSL</li>
+            <p>The purpose of this experiment is to create double-stranded DNA that reacts specifically to C4-HSL and dissociates.</p>
         </section>
-        <section>
-            <div>
-                <h2>Structure</h2>
-                <p>Quormone is attacked by aptamer.<br>
-                    Here, we proposed ...
-                </p>
-            </div>
-            <img src="images/MFE_aptamer.png" alt="explanation2">
+        <section class="scroll-point" id="area-2">
+            <h2>1. Hybridization of DNA aptamer (Pool<sub>99</sub>) + Output1</h2>
+                <h4>【Method】</h4>
+                    <h5>Hybridization of DNA aptamer (Pool<sub>99</sub>) + Output1</h5>
+                        <p>First, DNA Aptamer (Pool<sub>99</sub>) and Output1 were prepared to 600nM with 1 × TAE/Mg<sup>2+</sup>. After preparation, DNA Aptamer (Pool<sub>99</sub>) (20μL) was denatured at 95˚C for 5min and cooled to 4˚C using a PCR thermal cycler. DNA Aptamer (Pool<sub>99</sub>) (20μL) and Output1 (20μL) were then mixed in a 1 : 1 ratio, and the sample was set in a PCR thermal cycler at 53˚C for 30min, followed by 48˚C for at least 4hr. The mixture was then held at 43˚C for 30min and 38˚C for 4hr.<sup>1)</sup></p>
+                    <h5>Confirmation of double strand formation by electrophoresis (PAGE)</h5>
+                        <p>Polyacrylamide gels were prepared by mixing 10 W/ V. % Acrylamide Bis Mixed Solution (29 : 1) 10mL and initiator (APS 100µL + TEMED 10µL). Then, electrophoresis was performed at 150V, 15mA, 45min  using 0.5 × TBE buffer.</p>
+                <h4>【Results and Discussion】</h4>
+                    <p>Fig.1 shows the results of Experiment 1.</p>
+                    <img src="images/experiment2Fig1.png">
+                    <p>Fig.1 PAGE analysis</p>
+                    <p>(lane 1: ladder (20bp, 7µL)、lane 2: Output1 (300nM, 7.5µL), lane 3: DNA Aptamer (Pool<sub>99</sub>) (300nM, 7.5µL), lane 4: Output1 - DNA Aptamer (Pool<sub>99</sub>) (300nM, 7.5µL), lane 5: ladder (20bp, 7µL))</p>
+                    <p>Fig.1 shows that a single peak between 20bp and 40bp (peak 1) appeared in lane 2. Also, a single peak between 80bp and 100bp (peak 2) appeared in lane 3. In lane 4, three peaks have appeared, peak 1, peak 2, and a peak between 120bp and 140bp (peak 3). Peak 1 and 2 in lane 4 are Output1(32bp) and DNA Aptamer (Pool<sub>99</sub>) (99bp) that were not hybridized. Since peak 3 is the sum of peak 1 and peak 2, we confirmed the success of hybridization of Output1 and DNA Aptamer (Pool<sub>99</sub>) .</p>
+
         </section>
+        <section class="scroll-point" id="area-3">
+            <h2>2. Dissociation of Output1 - DNA Aptamer (Pool<sub>99</sub>) by C4-HSL</h2>
+                <h4>【Method】</h4>
+                    <h5>Dissociation of DNA aptamer (Pool<sub>99</sub>) + Output1</h5>
+                        <p>C4- HSL (1mg) was prepared to 1mM using DMSO. 600nM Output1 - DNA Aptamer (Pool<sub>99</sub>) and 1mM C4-HSL were mixed 1 : 1 and reacted for 1hr.</p>
+                    <h5>Confirmation of double-strand dissociation by electrophoresis</h5>
+                        <p>The polyacrylamide gel was prepared under the same conditions as those described earlier for electrophoresis. Then, electrophoresis was performed at 150V, 15mA, 45min using 0.5 × TBE buffer.</p>
+                <h4>【Results and Discussion】</h4>
+                    <p>Fig.2 shows the results of Experiment 2</p>
+                    <img src="images/experiment2Fig2.png">
+                    <p>Fig.2 PAGE analysis</p>
+                    <p>(lane 1: ladder (20bp, 7µL), lane 2: 300nM Output1 (7.5µL), lane 3: 300nM DNA Aptamer (Pool<sub>99</sub>) (7.5µL), lane 4: 300nM Output1 - DNA Aptamer (Pool<sub>99</sub>) (7.5µL), lane 5: 600nM Output1 - DNA Aptamer (Pool<sub>99</sub>) plus 1mM C4-HSL, lane 6: ladder (20bp, 7 μL))</p>
+                    <p>Comparing lane 4 and lane 5, it was observed that the 120bp-140bp peak was considerably faded in lane 5. Since peaks similar to those of Output1 (32bp) and DNA Aptamer (99bp) were observed, we consider that double-stranded DNA of Output1 - DNA Aptamer (Pool<sub>99</sub>) (131bp)  dissociated into single-stranded DNA of Output1(32bp) and DNA Aptamer(99bp). It can also be seen that the Output1 (32bp) and DNA Aptamer (Pool<sub>99</sub>) peaks of lane 5 are darker in color compared to lane 4. This confirms the dissociation of Output1 - DNA Aptamer (Pool<sub>99</sub>) (131bp) into Output2 and DNA Aptamer. This confirmed the release of Output2. The hybridized double-stranded DNA of Output1 - DNA Aptamer (Pool<sub>99</sub>) was found to function as an aptamer for C4-HSL.</p>
+        </section>
+        <section class="scroll-point" id="area-4">
+            <h2>Conclusion</h2>
+            <p>Single-stranded DNA, Output1 (32bp), DNA Aptamer (Pool<sub>99</sub>, 99bp) was hybridized to form double-stranded DNA (131bp). Then, when C4-HSL was added to the double-stranded DNA, the release of Output2 was confirmed. In conclusion, DNA aptamer - output1 (131bp) was found to function as an aptamer of C4-HSL.</p>
+       </section>
+        <section class="scroll-point" id="area-5">
+            <h2>References</h2>
+            <li>1) M. Zhao, <i>et al. PLoS ONE</i> 2019, <i>14(2)</i>, e0212041.</li>
+        </section>
+
     </main>
-    </body>
+    <aside id="sub-area">
+        <nav id="g-nav">
+            <ul id="g-navi">
+                <li><a href="#area-1">Experimental Items</a></li>
+                <li><a href="#area-2">Hybridization of DNA aptamer (Pool<sub>99</sub>) + Output1</a></li>
+                <li><a href="#area-3">Dissociation of Output1 - DNA Aptamer (Pool<sub>99</sub>) by C4-HSL</a></li>
+                <li><a href="#area-4">Conclusion</a></li>
+            </ul>
+        </nav>
+    </aside>
+</div>
+</body>
 <div id="footer"></div>
 </html>
