--- a/notebook.html
+++ b/notebook.html
@@ -76,7 +76,7 @@
                 <h4>Preparation amount</h4>
                 <p>C4-HSL Aptamer (99bp)</p>
                 <table class="element">
-                    <tr><td>C4-HSL Aptamer</td><td><div class="volume">0.48μL</div></td></tr>
+                    <tr><td>DNA Aptamer</td><td><div class="volume">0.48μL</div></td></tr>
                     <tr><td>Hybridization buffer</td><td><div class="volume">39.52μL</div></td></tr>
                 </table>
                 <table class="sum">
@@ -84,7 +84,7 @@
                 </table>
                 <p>Output1 (C50, 32bp)</p>
                 <table class="element">
-                    <tr><td>C50</td><td><div class="volume">0.48μL</div></td></tr>
+                    <tr><td>Output1</td><td><div class="volume">0.48μL</div></td></tr>
                     <tr><td>Hybridization buffer</td><td><div class="volume">39.52μL</div></td></tr>
                 </table>
                 <table class="sum">
@@ -153,20 +153,19 @@
                     <p>Fig.5 shows that Output1 was not released at all concentrations. This is due to the fact that the concentration of C4-HSL was too low. Therefore, the next step was to add an excess amount of C4-HSL and perform the same conditions.</p>
                 <h3>4-2 Electrophoresis in excess amounts of C4-HSL</h3>
                     <h4>【Method】</h4>
-                    <p>The polyacrylamide gel was prepared under the same conditions as those described earlier for electrophoresis in hybridization buffer. Then, 1mM of C4-HSL was added and electrophoresis was performed at 150V, 15mA, 35min.</p>
+                    <p>C4-HSL (1mg) was prepared to 1mM using DMSO. 600nM Output1 - DNA Aptamer (Pool<sub>99</sub>) and 1mM C4-HSL were mixed 1 : 1 and reacted for 1 hour. The polyacrylamide gel was prepared under the same conditions as those described earlier for electrophoresis in hybridization buffer, and electrophoresis was performed at 150V, 15mA, 45min</p>
                     <h4>【Results and Discussion】</h4>
                     <p>Fig.6 shows the results of Experiment 4-2.</p>
                     <img src="images/experimentFig.6.png">
                     <p>Fig.6 PAGE analysis</p>
-                    <p>(lane 1: ladder (20bp, 7µL), lane 2: 300nM Output1 (7.5µL), lane 3: 300nM DNA Aptamer (Pool<sub>99</sub>) (7.5µL), lane 4: 300nM Output1 - DNA Aptamer (Pool<sub>99</sub>) (7.5µL), lane 5: 300nM Output1 - DNA Aptamer (Pool<sub>99</sub>) plus 1mM C4-HSL, lane 6: ladder (20bp, 7μL))</p>
-                    <p>Fig.6 shows that the peaks at 120bp to 140bp disappeared from lane 4 and lane 5. Since peaks similar to those of Output1 (32bp) and DNA Aptamer (99bp) were observed, we consider that double-stranded DNA of Output1 - DNA Aptamer (Pool<sub>99</sub>) (131bp)  dissociated into single-stranded DNA of Output1(32bp) and DNA Aptamer(99bp).<br>
+                    <p>(lane 1: ladder (20bp, 7µL), lane 2: 300nM Output1 (7.5µL), lane 3: 300nM DNA Aptamer (Pool<sub>99</sub>) (7.5µL), lane 4: 300nM Output1 - DNA Aptamer (Pool<sub>99</sub>) (7.5µL), lane 5: 600nM Output1 - DNA Aptamer (Pool<sub>99</sub>) plus 1mM C4-HSL, lane 6: ladder (20bp, 7μL))</p>
+                    <p>Comparing lane 4 and lane 5, it was observed that the 120bp-140bp peak was considerably faded in lane 5. Since peaks similar to those of Output1 (32bp) and DNA Aptamer (99bp) were observed, we consider that double-stranded DNA of Output1 - DNA Aptamer (Pool<sub>99</sub>) (131bp)  dissociated into single-stranded DNA of Output1(32bp) and DNA Aptamer(99bp).<br>
                        It can also be seen that the Output1 (32bp) and DNA Aptamer (Pool<sub>99</sub>) peaks of lane 5 are darker in color compared to lane 4. This confirms the dissociation of Output1 - DNA Aptamer (Pool<sub>99</sub>) (131bp) into Output2 and DNA Aptamer and the release of Output2.<br>
                        The hybridized double-stranded DNA of Output1 - DNA Aptamer (Pool<sub>99</sub>) was found to function as an aptamer for C4-HSL.</p>
         </section>
         <section class="scroll-point" id="area-6">
             <h2>5. Conclusion</h2>
-            <p>Initially, the double-strand formation of Output1 and DNA Aptamer (Pool<sub>99</sub>) was confirmed by electrophoresis (PAGE) using hybridization buffer. However, the salt concentration in the hybridization buffer was too high to confirm double-strand formation.<br>
-                The double-strand formation was confirmed when the buffer was changed to 1 × TAE/ Mg<sup>2+</sup>. Therefore, we will change the buffer to 1 × TAE/ Mg<sup>2+</sup> and try to confirm the release of Output1 by adding C4-HSL and checking it by PAGE in the future.</p>
+            <p>Initially, we attempted double-strand formation of Output1 and DNA Aptamer (Pool<sub>99</sub>) using hybridization buffer. However, the salt concentration of the hybridization buffer was so high that double-strand formation could not be confirmed by electrophoresis (PAGE). When the buffer was changed to 1 × TAE/Mg<sup>2+</sup>, double-strand formation was confirmed by electrophoresis (PAGE). Next, when C4-HSL was added, the release of Output2 was confirmed by electrophoresis (PAGE). In conclusion, the hybridized double-stranded DNA: DNA aptamer - Output1 (131bp), was found to function as an aptamer for C4-HSL.</p>
         </section>
         <section class="scroll-point" id="area-7">
             <h2>References</h2>
