--- a/experimment.html
+++ b/experimment.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"><!-- レスポンシブデザインへの対応 -->
     <title>BIOMOD 2022 Quorum Hacker</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style_for_notebook.css">
+    <link rel="stylesheet" href="css/style_for_experiment.css">
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script><!-- jQuery読み込み -->
     <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script><!-- BootstrapのJS読み込み -->
@@ -17,7 +17,7 @@
     <script src="js/5-1-10.js"></script> <!--subnavの自作のJS-->
     <script src=”js/stickyfill.min.js”></script> <!--subnavのJS　Gitから-->
     <script src=”js/stickyfill.js”></script> <!--subnavのJS　Gitから-->
-    <script src="js/5-1-26_for_notebook.js"></script> <!--現在地表示の自作のJS-->
+    <script src="js/5-1-26_for_experiment.js"></script> <!--現在地表示の自作のJS-->
 
 
 
