--- a/experimment.html
+++ b/experimment.html
@@ -40,7 +40,7 @@
             <li>1. Hybridization of DNA aptamer (Pool<sub>99</sub>) + Output1</li>
             <li>2. Dissociation of Output1 and DNA Aptamer (Pool<sub>99</sub>) by C4-HSL</li>
             <p>The purpose of this experiment is to create double-stranded DNA that reacts specifically to C4-HSL and dissociates.</p>
-            <img src="images/experiment_flowchart.png">
+            <img src="images/experiment_flowchart.png" width="100%">
         </section>
         <section class="scroll-point" id="area-2">
             <h2>1. Hybridization of DNA aptamer (Pool<sub>99</sub>) + Output1</h2>
