--- a/simulation.html
+++ b/simulation.html
@@ -68,6 +68,7 @@
             <h2>The design of amplification circuit</h2>
             <p>The PEN toolbox is used as a mechanism to detect the input from the sensor and produce Aptamer outputs. Since the PEN toolbox requires consideration of the interaction between the DNA strand and the enzyme in the reaction process, each reaction is non-linear. In designing the amplification circuit, a schematic design of the reaction system was performed using DACCAD.</p>
             <p>DNA Artificial Circuits Computer-Assisted Design (DACCAD) is software developed for the purpose of quickly and easily designing complex circuits such as the PEN toolbox using directed graphs. When simulating with DACCAD, we predict changes in signal concentration based on the following theory.</p>
+            &phi;<sup>in</sup><sub>temp</sub>
             <img src="images/DACCADtheory.png">
             <p>The directed graph displayed by DACCAD is shown below.</p>
             <img src="images/DACCADimage.png">
@@ -111,6 +112,14 @@
             <img src="images/aptamer_DifferentInput.png">
             <p>Fig.8 Change in aptamer concentration with different input concentrations</p>
             <p>The result above confirms that drain plays a role as threshold value.</p>
+        </section>
+        <section class="scroll-point" id="area-6">
+            <h2>References</h2>
+            <li>1) M. Zhao, <i>et al. PLoS ONE</i> 2019, <i>14(2)</i>, e0212041.</li>
+            <li>2) G. Liu, <i>et al. Anal. Chem.</i> 2021, <i>93</i>, 13807-13814.</li>
+            <li>3) M. Z. Gines, <i>et al. Nat. Commun.</i> 2016, <i>7</i>, 13474.</li>
+            <li>4) C. Z. Wang, <i>et al. Nat. Chem. Biol.</i> 2018, <i>14</i>, 86-93.</li>
+            <li>5) Y. Tamba, <i>et al. J. Phys. Chem. B</i> 2010, <i>114</i>, 12018-12026.</li>
         </section>
     </main>
     <aside id="sub-area">
